Fix layout adjustments for overflow handling and header styling
- Updated the offset calculation for vertical overflow in script.js to account for the navbar height.
- Enhanced the header order styling in _header.sass by setting a max-width and centering the margin for better alignment.

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -631,9 +631,12 @@
             min-width: 13px
 
         &-order
+            max-width: 500px
+            margin: 0 auto
             margin-bottom: 8px
             &__price
                 font-size: $font-md-fx
+            
             &__stock
                 font-size: $font-md-fx
                 lgh: 113%
